Development
    Add in command line option --dvd_device
    Fix Issue #560, ATTRIBUTE_FORCE_CACHE not being processed
    Printout gmtk version in verbose mode
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Make cursor reappear when not in fullscreen mode
    Hide mouse/panel in fullscreen mode when mouse is above the panel area.
    Only make the fullscreen controls reappear when the mouse is at the bottom of the screen
    Fix keyboard shortcut capture to only detect CTRL, ALT or SHIFT modifiers
    Set CDDB to TYPE CD
    Fix typo on keyscreen
    Add tooltop for "Enable Video Hardware"
    Remove fuzzy and obsolete translations from po files
    Make Normal and Double size hotkeys work
    Fix saving and loading of preferred VO
    Fix 'f' not going to/returning from fullscreen
    Remove the use of mplayer profiles, as they are no longer needed
    Fix Issue 544, minor spelling issue
    Allow customization of some of the keyboard hotkeys, more to be done
    Replace get_window, get_visible, and get_allocation with gmtk versions
    Build foundation for customized hotkeys
    Add checkboxes for hardware and crystalhd codec support
    Conversion to using libgmtk as separate library
    Fix Issue #538
    Autodetect gtk3 at configure time
    Raise event on incomplete QuickTime file, and mark it for retry
    Fix compile issue when alsa is not being used
1.0.4
    Remove vdpau failure detection as it doesn't work
    Quit mplayer on vdpau restart, mplayer doesn't want to die
    Restart mplayer on vdpau create error
    Try and set the initial window size prior to loading the media, may fix vdpau issues
    Fix AC3 passthru, option was not being set, Issue #533
    Fix default filename in context menu. Issue #531
    Enable Save in popup menu with control id is specified but not window, useful for scripting
    Updated Portuguese translation
    Added a missing string to the Polish translation